Updated School API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+## Spring Context 
+server.servlet.context-path=/yooyoo
+
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:postgresql://localhost:5432/yooyoo_db?currentSchema=yooyoo
 spring.datasource.username= postgres
