--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:postgresql://localhost:5432/yooyoo_db?currentSchema=yooyoo
 spring.datasource.username= postgres
-spring.datasource.password= tiger
+spring.datasource.password= admin1234
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
@@ -15,7 +15,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.flyway.url = jdbc:postgresql://localhost:5432/yooyoo_db?currentSchema=yooyoo
 spring.flyway.schemas = yooyoo
 spring.flyway.user = postgres
-spring.flyway.password = tiger
+spring.flyway.password = admin1234
 
 
 spring.flyway.validate-on-migrate=false
