--- a/src/main/resources/application1.properties
+++ b/src/main/resources/application1.properties
@@ -5,6 +5,7 @@ spring.datasource.password= tiger
 
 
 media.url = http://localhost:8080/media/
+school.id = 1
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
@@ -15,4 +16,23 @@ spring.jpa.hibernate.ddl-auto = update
 
 
 
+
 spring.jackson.serialization.fail-on-empty-beans=false
+
+spring.http.multipart.max-file-size=100MB
+spring.http.multipart.max-request-size=100MB
+spring.http.multipart.enabled=true
+spring.http.multipart.location=${java.io.tmpdir}
+
+
+server.port=8443
+
+# The format used for the keystore. It could be set to JKS in case it is a JKS file
+server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate
+server.ssl.key-store=classpath:yooyoo.p12
+# The password used to generate the certificate
+server.ssl.key-store-password=yooyoo@123
+# The alias mapped to the certificate
+server.ssl.key-alias=yooyoo
+
