--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 	<groupId>com.yoyo</groupId>
 	<artifactId>yoyo</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2</version>
 	<packaging>jar</packaging>
 	<name>yoyo</name>
 	<description>Demo project for Spring Boot</description>
@@ -70,6 +70,10 @@
 			<artifactId>jackson-dataformat-csv</artifactId>
 			<version>2.5.3</version>
 		</dependency>
+		<dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-actuator</artifactId>
+</dependency>
 		
 		<dependency> 
     <groupId>com.opencsv</groupId> 
@@ -79,6 +83,11 @@
 <dependency>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-mail</artifactId>
+</dependency>
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.9.4</version>
 </dependency>
 		
 
